--- a/visualize_english.ipynb
+++ b/visualize_english.ipynb
@@ -38,6 +38,7 @@
     "from models.attention import SimpleAttention\n",
     "from models.attention2 import SimpleAttention2\n",
     "from models.bert import BERTClassification\n",
+    "from models.simple import SimpleClassification\n",
     "from dataset.cefr_leveled_texts import CEFRLeveledTexts\n",
     "from dataset.cefr_sp import CEFR_SP\n",
     "from util.metrics import ClassificationMetrics\n",
@@ -85,7 +86,8 @@
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
     "tokenizer = BertTokenizer.from_pretrained(\"bert-base-cased\")\n",
-    "model = SimpleAttention(NUM_CLASS, vocab_size=len(tokenizer)).to(DEVICE)\n",
+    "# model = SimpleAttention(NUM_CLASS, vocab_size=len(tokenizer)).to(DEVICE)\n",
+    "model = SimpleClassification(NUM_CLASS, vocab_size=len(tokenizer)).to(DEVICE)\n",
     "criterion = nn.CrossEntropyLoss(reduction=\"sum\")  # to get average easily\n",
     "optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)"
    ]
@@ -106,21 +108,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [0/10]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'SimpleAttention' object has no attribute 'dropout'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m inputs \u001b[39m=\u001b[39m tokenizer(sentences, return_tensors\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpt\u001b[39m\u001b[39m\"\u001b[39m, padding\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\u001b[39m.\u001b[39mto(DEVICE)\n\u001b[1;32m      8\u001b[0m labels \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mLongTensor(labels)\u001b[39m.\u001b[39mto(DEVICE)\n\u001b[0;32m---> 10\u001b[0m outputs \u001b[39m=\u001b[39m model(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49minputs)\n\u001b[1;32m     11\u001b[0m loss \u001b[39m=\u001b[39m criterion(outputs, labels)\n\u001b[1;32m     12\u001b[0m train_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39mitem()\n",
-      "File \u001b[0;32m~/virtualenv/text/lib/python3.11/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/_Project/JLPT-Difficulty-Predictor/models/attention.py:43\u001b[0m, in \u001b[0;36mSimpleAttention.forward\u001b[0;34m(self, input_ids, attention_mask, **kwargs)\u001b[0m\n\u001b[1;32m     39\u001b[0m out, _ \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mattention(out, out, out, key_padding_mask\u001b[39m=\u001b[39mattention_mask \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[1;32m     41\u001b[0m \u001b[39m# Dropout layer\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[39m# (B, seq_len, hidden_size * 2) -> (B, hidden_size * 2)\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdropout(out[:, \u001b[39m0\u001b[39m, \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m])\n\u001b[1;32m     45\u001b[0m \u001b[39m# Fully connected layer\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[39m# (B, hidden_size * 2) -> (B, num_calss)\u001b[39;00m\n\u001b[1;32m     47\u001b[0m out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc(out)\n",
-      "File \u001b[0;32m~/virtualenv/text/lib/python3.11/site-packages/torch/nn/modules/module.py:1614\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1612\u001b[0m     \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m modules:\n\u001b[1;32m   1613\u001b[0m         \u001b[39mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1614\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m object has no attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m   1615\u001b[0m     \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, name))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SimpleAttention' object has no attribute 'dropout'"
+      "Epoch [0/10]\n",
+      "[Batch    0/1795] Loss: 1.4978\n",
+      "[Batch  500/1795] Loss: 1.4539\n",
+      "[Batch 1000/1795] Loss: 1.3802\n",
+      "[Batch 1500/1795] Loss: 1.6916\n",
+      "Total train loss: 1.2668\n",
+      "Accuracy: 45.31% | Precision: 0.2444\n",
+      "Recall:   0.2503 | F1 score:  0.2257\n",
+      "\n",
+      "Epoch [1/10]\n",
+      "[Batch    0/1795] Loss: 1.1711\n"
      ]
     }
    ],
