--- a/visualize_english.ipynb
+++ b/visualize_english.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "LEARNING_RATE = 3e-4\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "BATCH_SIZE = 4\n",
+    "BATCH_SIZE = 64\n",
     "NUM_EPOCHS = 10\n",
     "LOAD_FROM = None\n",
     "DATA_ROOT = Path(\"training_data\")\n",
@@ -85,9 +85,9 @@
     "# val_dataset = Subset(val_dataset, np.arange(20))\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-cased\")\n",
-    "# model = SimpleAttention(NUM_CLASS, vocab_size=len(tokenizer)).to(DEVICE)\n",
-    "model = SimpleClassification(NUM_CLASS, vocab_size=len(tokenizer)).to(DEVICE)\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "model = SimpleAttention(NUM_CLASS, vocab_size=len(tokenizer)).to(DEVICE)\n",
+    "# model = BERTClassification(NUM_CLASS).to(DEVICE)\n",
     "criterion = nn.CrossEntropyLoss(reduction=\"sum\")  # to get average easily\n",
     "optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)"
    ]
@@ -109,16 +109,15 @@
      "output_type": "stream",
      "text": [
       "Epoch [0/10]\n",
-      "[Batch    0/1795] Loss: 1.4978\n",
-      "[Batch  500/1795] Loss: 1.4539\n",
-      "[Batch 1000/1795] Loss: 1.3802\n",
-      "[Batch 1500/1795] Loss: 1.6916\n",
-      "Total train loss: 1.2668\n",
-      "Accuracy: 45.31% | Precision: 0.2444\n",
-      "Recall:   0.2503 | F1 score:  0.2257\n",
-      "\n",
-      "Epoch [1/10]\n",
-      "[Batch    0/1795] Loss: 1.1711\n"
+      "[Batch    0/1795] Loss: 1.8025\n",
+      "[Batch   50/1795] Loss: 1.5412\n",
+      "[Batch  100/1795] Loss: 2.0305\n",
+      "[Batch  150/1795] Loss: 1.1756\n",
+      "[Batch  200/1795] Loss: 1.1248\n",
+      "[Batch  250/1795] Loss: 0.8353\n",
+      "[Batch  300/1795] Loss: 1.1251\n",
+      "[Batch  350/1795] Loss: 0.9244\n",
+      "[Batch  400/1795] Loss: 0.6148\n"
      ]
     }
    ],
@@ -140,7 +139,7 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        if batch_idx % 500 == 0:\n",
+    "        if batch_idx % 50 == 0:\n",
     "            print(f\"[Batch {batch_idx:4d}/{len(train_loader)}] Loss: {loss.item()/BATCH_SIZE:.4f}\")\n",
     "\n",
     "    print(f\"Total train loss: {train_loss/len(train_dataset):.4f}\")\n",
