--- a/visualize_english.ipynb
+++ b/visualize_english.ipynb
@@ -121,7 +121,58 @@
       "Recall:   0.2716 | F1 score:  0.2607\n",
       "\n",
       "Epoch [1/10]\n",
-      "[Batch    0/113] Loss: 1.2007\n"
+      "[Batch    0/113] Loss: 1.2007\n",
+      "[Batch   50/113] Loss: 1.3042\n",
+      "[Batch  100/113] Loss: 1.2395\n",
+      "Total train loss: 1.2186\n",
+      "Accuracy: 50.95% | Precision: 0.3148\n",
+      "Recall:   0.2770 | F1 score:  0.2637\n",
+      "\n",
+      "Epoch [2/10]\n",
+      "[Batch    0/113] Loss: 1.1464\n",
+      "[Batch   50/113] Loss: 1.0737\n",
+      "[Batch  100/113] Loss: 1.1070\n",
+      "Total train loss: 1.1698\n",
+      "Accuracy: 51.68% | Precision: 0.3260\n",
+      "Recall:   0.3152 | F1 score:  0.3055\n",
+      "\n",
+      "Epoch [3/10]\n",
+      "[Batch    0/113] Loss: 1.0942\n",
+      "[Batch   50/113] Loss: 1.1177\n",
+      "[Batch  100/113] Loss: 1.1517\n",
+      "Total train loss: 1.1302\n",
+      "Accuracy: 50.07% | Precision: 0.3059\n",
+      "Recall:   0.3329 | F1 score:  0.3177\n",
+      "\n",
+      "Epoch [4/10]\n",
+      "[Batch    0/113] Loss: 1.0461\n",
+      "[Batch   50/113] Loss: 1.1533\n",
+      "[Batch  100/113] Loss: 1.2150\n",
+      "Total train loss: 1.1139\n",
+      "Accuracy: 46.12% | Precision: 0.2938\n",
+      "Recall:   0.3287 | F1 score:  0.2954\n",
+      "\n",
+      "Epoch [5/10]\n",
+      "[Batch    0/113] Loss: 0.9841\n",
+      "[Batch   50/113] Loss: 1.0700\n",
+      "[Batch  100/113] Loss: 1.1668\n",
+      "Total train loss: 1.1000\n",
+      "Accuracy: 49.12% | Precision: 0.3106\n",
+      "Recall:   0.3596 | F1 score:  0.3247\n",
+      "\n",
+      "Epoch [6/10]\n",
+      "[Batch    0/113] Loss: 1.1260\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m outputs \u001b[39m=\u001b[39m model(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39minputs)\n\u001b[1;32m     11\u001b[0m loss \u001b[39m=\u001b[39m criterion(outputs, labels)\n\u001b[0;32m---> 12\u001b[0m train_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39;49mitem()\n\u001b[1;32m     14\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m     15\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
